elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: elastic
spec:
  selector:
    matchLabels:
      run: elasticsearch
  template:
    metadata:
      labels:
        name: elasticsearch
        run: elasticsearch
    spec:
      containers:
      - image: docker.elastic.co/elasticsearch/elasticsearch:6.0.0
        name: elasticsearch
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9200
          protocol: TCP
        volumeMounts:
          - name: elastic-config
            mountPath: /etc/elasticsearch/elasticsearch.yaml
            subPath: elasticsearch.yaml
      volumes:
      - name: elastic-config
        configMap:
          name: elastic-config
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    run: elasticsearch
  namespace: elastic
spec:
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
  selector:
    run: elasticsearch
  type: NodePort   #LoadBalancer
