ingress-elastic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: elastic    
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: desktop-epba0ro
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
